[package]
name = "elna_RAG_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
candid-extractor = "0.1.4"
ic-cdk = "0.12"
ic-cdk-macros = "0.8.4"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
serde = "1.0.197"
serde_json = "1.0.120"
url = "2.5.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
ic-stable-structures = "0.5.6"



